# LiveAudioTrans

./: Cargo.toml  README.md  build.rs
models/: tokenizer-marian-base-en.json  tokenizer-marian-base-zh.json
src/: capture.rs  display.rs  download_model.rs  main.rs  transcribe.rs  translate.rs
